--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         
                 <nav class="main">
 
-                <p class="text-center text-gray-300 font-bold mr-12 "><i>@PaulFidelis</i> </p> 
+                <p class="text-center text-white font-bold mr-12 "><i>@PaulFidelis</i> </p> 
 
                 <div class="mt-6">
-                    <span class="text-gray-300  flex justify-center">
+                    <span class="text-white  flex justify-center">
                         
                        <p class=" border-2 p-2 border-gray-400 w-1/2 text-center ">Hey Dear! I am a frontend Web Developer who loves bringing designs to reality </p> </span>
                     </div>
