--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     
 </head>
-<body class="bg-purple-600 h-600">
+<body class="bg-black h-600">
     <div class="content-center " >
                 <div class=" flex justify-center md:ml-64">
                     <div class="">
