--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <div class="">
                         <img src="svgs/nn.jfif" class="w-32 m-2 h-32 mt-24 md:ml-0 ml-40 center  rounded-full" alt="image">
                     </div>
-                    <img src="svgs/download.svg" class="w-12 ml-64 mt-8 bg-white h-12 border-pink-500  rounded-full p-2 hover:shadow-lg transform hover:scale-110 transition ease-out duration-300" alt="share">
+                    <img src="svgs/download.svg" class="w-12 ml-64 sm:hidden mt-8 bg-white h-12 border-pink-500  rounded-full p-2 hover:shadow-lg transform hover:scale-110 transition ease-out duration-300" alt="share">
                     
                 </div>
         
