--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     
 
                 </div>
-                <button class="btn" onclick="myfunc()">click me </button>
+                <button class=" text-white btn" onclick="myfunc()">click me </button>
                     <div id="b"><p class=" border-2 border-green text-xs text-gray-100 rounded-full p-2 border-gray-400 w-32 text-center "> Built with love </p></div>
             </center>
         
