--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
                 <button class=" text-white btn" onclick="myfunc()">click me </button>
                     <div id="b">
 
-                   <p class=" border-2 border-green text-xs text-gray-100 rounded-full p-2 border-gray-400 w-32 text-center "> Built with love </p>
+                   <p class=" border-2 border-green text-xs text-gray-100 rounded-full p-2 border-gray-400 w-32 text-center mb-4 "> Built with love </p>
                     
 
-                 <p class=" border-2 border-green text-xs text-gray-100 rounded-full p-2 border-gray-400 w-32 text-center "> a web development learning platform  </p>
-            <p class=" border-2 border-green text-xs text-gray-100 rounded-full p-2 border-gray-400 w-32 text-center "> my Django Blog </p></div>
+                 <p class=" border-2 border-green text-xs text-gray-100 rounded-full p-2 border-gray-400 w-32 text-center mb-4"> a web development learning platform  </p>
+            <p class=" border-2 border-green text-xs text-gray-100 rounded-full p-2 border-gray-400 w-32 text-center  "> my Django Blog </p></div>
             
 
 </center>
