--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                    <p class=" border-2 border-green text-xs text-gray-100 rounded-full p-2 border-gray-400 w-32 text-center mb-4 "> Built with love </p>
                     
 
-                 <p class=" border-2 border-green text-xs text-gray-100 rounded-full p-2 border-gray-400 w-32 text-center mb-4"> Learning Platform  </p>
+                 <p class=" border-2 border-green text-xs text-gray-100 rounded-full p-2 border-gray-400 w-32 text-center mb-4"><a href="https://mainkey-tutorial.vercel.app">Learning Platform </a> </p>
             <p class=" border-2 border-green text-xs text-gray-100 rounded-full p-2 border-gray-400 w-32 text-center  "> My Django Blog </p></div>
             
 
