--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     
 
                  <p class=" border-2 border-green text-xs text-gray-100 rounded-full p-2 border-gray-400 w-32 text-center mb-4"><a href="https://mainkey-tutorial.vercel.app">Learning Platform </a> </p>
-            <p class=" border-2 border-green text-xs text-gray-100 rounded-full p-2 border-gray-400 w-32 text-center  "> My Django Blog </p></div>
+            <p class=" border-2 border-green text-xs text-gray-100 rounded-full p-2 border-gray-400 w-32 text-center  "> <a href="http://fidelmak.pythonanywhere.com/posts/iphone-14-pro-display-cutouts-could-show-as-single/">My Django Blog</a> </p></div>
             
 
 </center>
