--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="mt-6">
                     <span class="text-white  flex justify-center">
                         
-                       <p class=" border-2 p-2 border-gray-400 w-1/2 text-center ">Hey Dear! I am a frontend Web Developer who loves bringing designs to reality </p> </span>
+                       <p class=" border-2 p-2 border-gray-400 w-1/2 text-center ">Hey Dear!♥️ </p> </span>
                     </div>
 
                 </nav>
