--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <button class=" text-white btn" onclick="myfunc()">click to view projects  </button>
                     <div id="b">
 
-                   <p class=" border-2 border-green text-xs text-gray-100 rounded-full p-2 border-gray-400 w-32 text-center mb-4 "><a href="https://oluborodeakintunde.netlify.app"> Built with love</a> </p>
+                   <p class=" border-2 border-green text-xs text-gray-100 rounded-full p-2 border-gray-400 w-32 text-center mb-4 "><a href="https://my-project-link.vercel.app"> Built with love</a> </p>
                     
 
                  
